新增日志，并且修复某些插件加载失败

--- a/OpenSDK.NEL/OpenSDK.NEL.csproj
+++ b/OpenSDK.NEL/OpenSDK.NEL.csproj
@@ -25,6 +25,9 @@
         <Reference Include="Codexus.OpenSDK">
             <HintPath>..\SDK\Codexus.OpenSDK.dll</HintPath>
         </Reference>
+        <Reference Include="Downloader">
+            <HintPath>..\SDK\Downloader.dll</HintPath>
+        </Reference>
   </ItemGroup>
 
   <ItemGroup>
