--- a/OpenSDK.NEL/OpenSDK.NEL.csproj
+++ b/OpenSDK.NEL/OpenSDK.NEL.csproj
@@ -40,6 +40,7 @@
         <PackageReference Include="DotNetty.Handlers" Version="0.7.6"/>
         <PackageReference Include="DotNetty.Transport" Version="0.7.6"/>
         <PackageReference Include="OpenTl.Netty.Socks" Version="1.0.2"/>
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0"/>
         <PackageReference Include="Serilog" Version="4.3.0"/>
         <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1"/>
         <PackageReference Include="SharpCompress" Version="0.41.0"/>
